--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -671,6 +671,24 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie-als-strate
 month={august},
 year={2014}}
 
+@incollection{mendling2007makes,
+  title={What makes process models understandable?},
+  author={Mendling, Jan and Reijers, Hajo, A and Cardoso, Jorge},
+  booktitle={Business Process Management},
+  pages={48--63},
+  year={2007},
+  publisher={Springer},
+  adress={Heidelberg}
+}
+
+@phdthesis{thesis_maja,
+  type = {PhD Thesis},
+  title = {{Constraint-based Workflow Management Systems: Shifting Control to Users}},
+  author = {Pesic, M.},
+  school = {Eindhoven University of Technology},
+  year = 2008
+}
+
 
 
 
