--- a/Masterarbeit 4/Tex/chapter5.tex
+++ b/Masterarbeit 4/Tex/chapter5.tex
@@ -11,7 +11,7 @@ Hierfür sollen die imperativen und deklarativen Prozessmodelle, welche für die
 Zum einen sollen die imperativen und deklarativen Modellierungssprachen im Hinblick auf deren Erfüllung der in Kapitel 3.1.1 vorgestellten \textit{Grundsätze ordnungsgemäßer Modellierung} untersucht werden, da durch deren Einhaltung die Qualität, Klarheit und Konsistenz der Prozessmodelle gesichert wird \cite{freund2007}. Hierbei werden die erstellten Prozessmodelle auf \textit{Klarheit}, \textit{Richtigkeit}, \textit{Wirtschaftlichkeit}, \textit{Relevanz}, \textit{Vergleichbarkeit} und \textit{systematischen Aufbau} verglichen.
 
 \subsubsection{Klarheit}
-Die Prozessmodelle, welche jeweils in imperativer und deklarativer Prozessmodellierungssprache erstellt werden, sollen im Hinblick auf ihre Klarheit untersucht werden. Hierbei soll festgestellt werden, ob es wesentliche Unterschiede bei der Verständlichkeit der Prozessmodelle gibt, wenn diese in imperativer, bzw. deklarativer Prozessmodellierungssprache erstellt wurden. Denn fehlende Verständlichkeit eines Prozessmodells führt dazu, dass das Prozessmodell wenig Nutzen bringt. Insbesondere soll hier auch die Anzahl an Verbindungen zwischen Aktivitäten verglichen werden, da sich diese mit steigender Anzahl negativ auf die Verständlichkeit auswirken.\newline
+Die Prozessmodelle, welche jeweils in imperativer und deklarativer Prozessmodellierungssprache erstellt werden, sollen im Hinblick auf ihre Klarheit untersucht werden. Hierbei soll festgestellt werden, ob es wesentliche Unterschiede bei der Verständlichkeit der Prozessmodelle gibt, wenn diese in imperativer, bzw. deklarativer Prozessmodellierungssprache erstellt wurden. Denn fehlende Verständlichkeit eines Prozessmodells führt dazu, dass das Prozessmodell wenig Nutzen bringt. Insbesondere soll hier bei den imperativen Modellen die Anzahl an Verbindungen bzw. bei den deklarativen Modellen die Anzahl an Constraints zwischen Aktivitäten verglichen werden, da sich diese mit steigender Anzahl negativ auf die Verständlichkeit auswirken.\newline
 Weiterhin soll hier untersucht werden, ob es wesentliche Unterschiede in der Verständlichkeit der imperativen und deklarativen Prozessmodelle gibt, in Abhängigkeit der Größe des zugrunde liegenden Software-Engineering Prozessmodells. Hierbei kann die Eignung der jeweiligen Modellierungssprache sehr gut festgestellt werden, da sie im Falle von schwerer/fehlender Verständlichkeit nicht zum Modellieren geeignet ist. Falls es Unterschiede in der Verständlichkeit der Prozessmodelle in Abhängigkeit der Größe des zugrunde liegenden Metamodells gibt, lassen sich hierbei Rückschlüsse auf die Eignung der Prozessmodellierungssprache in Bezug auf große/kleine Metamodelle ziehen.
 \subsubsection{Richtigkeit}
 Die Richtigkeit der Prozessmodelle soll ebenfalls verglichen werden. Hierbei soll die semantische und syntaktische Richtigkeit der Prozessmodelle untersucht werden.
