--- a/Masterarbeit 4/Tex/chapter3.tex
+++ b/Masterarbeit 4/Tex/chapter3.tex
@@ -40,7 +40,7 @@ Der \textit{Grundsatz der Relevanz} besagt, dass alle Elemente und Verknüpfunge
 
 Der \textit{Grundsatz der Wirtschaftlichkeit} besagt, dass die Modellierung kosteneffektiv durchzuführen ist \cite{leimeister2012}. Es gilt also abzuwägen, ob der Aufwand, der für die Modellierung notwendig ist, auch einen entsprechenden Nutzen bringt \cite{freund2007, journals95}.\newline
 
-Durch den \textit{Grundsatz der Klarheit} soll sichergestellt werden, dass das Modell für den Adressaten verständlich ist. Es muss also auf bei der Modellierung auf Strukturiertheit, Verständlichkeit und Anschaulichkeit geachtet werden. Insbesondere sollte das Modell ohne besondere methodische Kenntnisse verständlich sein. Somit sollte die Modellierung entweder von links nach rechts oder von oben nach unten verlaufen, wobei darauf zu achten ist, dass sich Flusslinien und Kanten hierbei so wenig wie möglich überkreuzen. Weiterhin sollte die Anzahl der Elemente auf das Nötigste reduziert werden. Vor allem die Anzahl an Verzweigungen innerhalb eines Prozessmodells, hervorgerufen durch parallele Gateways und XOR Gateways wirkt sich negativ auf die Verständlichkeit von Prozessmodellen aus. Ebenso allgemein, die Anzahl von Verbindungen zwischen Aktivitäten. \cite{leimeister2012,journals95, freund2007,reinshagen2009, becker2012prozessmanagement,koch2011,bpm07}.\newline
+Durch den \textit{Grundsatz der Klarheit} soll sichergestellt werden, dass das Modell für den Adressaten verständlich ist. Es muss also auf bei der Modellierung auf Strukturiertheit, Verständlichkeit und Anschaulichkeit geachtet werden. Insbesondere sollte das Modell ohne besondere methodische Kenntnisse verständlich sein. Somit sollte die Modellierung entweder von links nach rechts oder von oben nach unten verlaufen, wobei darauf zu achten ist, dass sich Flusslinien und Kanten hierbei so wenig wie möglich überkreuzen. Weiterhin sollte die Anzahl der Elemente auf das Nötigste reduziert werden. Vor allem die Anzahl an Verzweigungen innerhalb eines Prozessmodells, hervorgerufen durch parallele Gateways und XOR Gateways wirkt sich negativ auf die Verständlichkeit von Prozessmodellen aus. Ebenso allgemein, die Anzahl von Verbindungen zwischen Aktivitäten und speziell im Hinblick auf deklarative Modelle die Anzahl der Constraints und deren Komplexität. \cite{leimeister2012,journals95, freund2007,reinshagen2009, becker2012prozessmanagement,koch2011,bpm07,thesis_maja}.\newline
 
 Wird in unterschiedlichen Modellen der gleiche Sachverhalt abgebildet, so sollten letztendlich auch vergleichbare Modelle entstehen, unabhängig von der verwendeten Modellierungssprache. Dies besagt der \textit{Grundsatz der Vergleichbarkeit}. Insbesondere ist auf einen einheitlichen Abstraktionsgrad der Prozessmodelle zu achten. \cite{leimeister2012, journals95, freund2007,reinshagen2009}.\newline
 
