--- a/Masterarbeit 4/Tex/chapter2.tex
+++ b/Masterarbeit 4/Tex/chapter2.tex
@@ -44,8 +44,8 @@ Wie Abbildung  \ref{fig:Wuerfel} entnommen werden kann, besteht der Prozess des 
  
 \section{Softwareprozessmodelle}\label{sec:chapter.2: Softwareprozessmodelle}
 
-Für das Verständnis, die Schaffung oder Unternehmung etwas Großen fertigen Menschen in der Regel ein vereinfachtes Bild davon an, bzw. nehmen Maß, fertigen eine Skizze oder einen Plan an oder orientieren sich an einem Vorbild, bzw. bauen sich eines. Dies geschieht normalerweise mit Papier und Schreibzeug, anderen Materialien oder einem Computer. Besonders für die Lösung von komplexen wissenschaftlichen Problemen oder für die Erfüllung großer Führungs- und Konstruktionsaufgaben ist dies unumgänglich \cite{Hesse2008}. \newline
-Hierbei stützten sie sich auf Modelle, welche als Stellvertreter für das was verstanden, geschaffen, unternommen oder betrieben werden soll, ansehen kann \cite{Hesse2008}. \newline
+Für das Verständnis, die Schaffung oder Unternehmung von etwas Großem, fertigen Menschen in der Regel ein vereinfachtes Bild davon an, bzw. nehmen Maß, fertigen eine Skizze oder einen Plan an oder orientieren sich an einem Vorbild, bzw. bauen sich eines. Dies geschieht normalerweise mit Papier und Schreibzeug, anderen Materialien oder einem Computer. Besonders für die Lösung von komplexen wissenschaftlichen Problemen oder für die Erfüllung großer Führungs- und Konstruktionsaufgaben ist dies unumgänglich \cite{Hesse2008}. \newline
+Hierbei stützten sie sich auf Modelle, welche als Stellvertreter für die Sache, die verstanden, geschaffen, unternommen oder betrieben werden soll, angesehen werden kann \cite{Hesse2008}. \newline
 Insbesondere die heutzutage von Softwareentwicklern zu erstellenden Softwareprodukte zeichnen sich durch ein hohes Maß an Komplexität und Umfang aus. Neben den Erwartungen von Kunden hinsichtlich Qualität müssen Softwaresysteme ebenfalls termingerecht und innerhalb eines vorgegebenen Budgetrahmens erstellt werden. Effektive und effiziente Softwareprozessmodelle gewinnen somit immer mehr Bedeutung \cite{Grechenig2010}.
 Modell leitet sich von dem lateinischen Begriff  \glqq modelus \grqq
 ab und kann mit  \glqq Regel, Form, Muster, Vorbild \grqq übersetzt werden \cite{Hesse2008}. 
@@ -82,7 +82,7 @@ Eine Schnittstelle zwischen diesen beiden Projekttypen bilden die \textit{Mittel
 
 Aus der eben erfolgten Einteilung von Software-Projekten lässt sich eine Einteilung von Software-Prozessmodellen in \textit{leichtgewichtige} und \textit{schwergewichtige Prozessmodelle} ableiten \cite{Hanser2010}. \newline
 \textit{Leichtgewichtige Prozessmodelle} eignen sich eher für kleine Teams, bei denen keine detaillierte Anforderungserhebung stattfindet, da die Kommunikation sowohl innerhalb des Teams, als auch mit dem Kunden auf Grund der kleinen Teamgröße gut funktioniert. Da viele Informationen hier informell über kurze Kommunikationswege weitergegeben werden, ist eine ausführliche Dokumentation derer nicht notwendig. Der Einsatz von \textit{leichtgewichtigen Prozessmodellen} eignet sich sehr gut für \textit{einfache Projekte} und teilweise auch für \textit{mittelschwere Projekte}\cite{Hanser2010}. \newline
-Eine sehr formale und dokumentenlastige Vorgehensweise kommt bei den \textit{schwergewichtigen Prozessmodellen} zum Einsatz. Es findet eine ausführliche Dokumentation in allen Entwicklungsphasen statt und der Ablauf des Prozesses ist genau vorgegeben. Bei Software-Produkten, welche bei einer möglichen Fehlfunktion Menschenleben in Gefahr bringen ist beispielsweise eine Vorgehensweise mit einem \textit{schwergewichtigen Prozessmodell} sinnvoll. Ihr Einsatz ist besonders in \textit{schweren Projekten} sinnvoll, aber auch in \textit{mittelschweren Projekten} \cite{Hanser2010}. \newline
+Eine sehr formale und dokumentenlastige Vorgehensweise kommt bei den \textit{schwergewichtigen Prozessmodellen} zum Einsatz. Es findet eine ausführliche Dokumentation in allen Entwicklungsphasen statt und der Ablauf des Prozesses ist genau vorgegeben. Bei Software-Produkten, welche bei einer möglichen Fehlfunktion Menschenleben in Gefahr bringen, ist beispielsweise eine Vorgehensweise mit einem \textit{schwergewichtigen Prozessmodell} sinnvoll. Ihr Einsatz ist besonders in \textit{schweren Projekten} vorzuziehen, aber auch in \textit{mittelschweren Projekten} \cite{Hanser2010}. \newline
 
 
 
