--- a/Masterarbeit 4/Tex/chapter3.tex
+++ b/Masterarbeit 4/Tex/chapter3.tex
@@ -1,6 +1,6 @@
 
 \chapter{Modellierung}\label{sec:chapter3}
-Kapitel 3 liefert einen Überblick über die Grundlagen der Modellierung. Zunächst werden in Kapitel 3.1 die Grundlagen der Prozessmodellierung vorgestellt. Hierbei wird auf die Grundsätze ordnungsgemäßer Modellierung eingegangen. Anschließend werden in Kapitel 3.2 Prozessmodellierugssprachen vorgestellt. Einerseits wird hier auf imperative Modellierungssprachen eingegangen und es wird ein kurzer Einblick in die Prozessmodellierungssprache BPMN gegeben.Andererseits werden deklarative Prozessmodellierungssprachen vorgestellt und es erfolgt ein detaillierter Einblick in die deklarative Prozessmodellierungssprache ConDec.
+Kapitel 3 liefert einen Überblick über die Grundlagen der Modellierung. Zunächst werden in Kapitel 3.1 die Grundlagen der Prozessmodellierung erläutert. Hierbei wird auf die Grundsätze ordnungsgemäßer Modellierung eingegangen. Anschließend werden in Kapitel 3.2 Prozessmodellierugssprachen eingeführt. Einerseits werden hier imperative Modellierungssprachen erklärt und es wird ein kurzer Einblick in die Prozessmodellierungssprache BPMN gegeben.Andererseits werden deklarative Prozessmodellierungssprachen vorgestellt und es erfolgt ein detaillierter Einblick in die deklarative Prozessmodellierungssprache ConDec.
 
 \section{Prozessmodellierung}\label{sec:chapter3:Prozessmodellierung}
 
@@ -16,7 +16,7 @@ Mit der Modellierung von Prozessen werden verschiedene Ziele verfolgt. Eine erst
 \end{center}
 \end{figure}
 
-Bei der \textit{Transparenz} geht es darum, dass alle Beteiligten am Prozess einsehen können, von wem welche Aufgaben durchgeführt werden. Weiterhin verfolgt die Prozessmodellierung das Ziel, durch \textit{Fehlervermeidung} die Qualität, Termintreue und Kundenzufriedenheit zu erhöhen. Durch die Modellierung eines Prozesses kann dieser genau analysiert werden und hierdurch können Einsparungspotenziale von \textit{Kosten} aufgedeckt werden. Indem die Abläufe in einem Unternehmen als Prozesse dargestellt werden, ist es möglich eine \textit{personenunabhängige Verfügbarkeit des Wissens} zu erreichen, da das Wissen hierdurch allen Personen zugänglich gemacht wird, unabhängig davon, ob sie am Prozess beteiligt sind oder nicht. Die Prozessmodellierung führt zu einer \textit{erleichterten Einarbeitung neuer Mitarbeiter}. Durch die Darstellung der Tätigkeiten der einzelnen Mitarbeiter in Prozessmodellen, wird ihnen ihr Beitrag zum Erfolg des Unternehmens vor Augen geführt, was eine \textit{erhöhte Mitarbeitermotivation} zur Folge hat. Nach deren Erstellung gibt es verschiedene \textit{Auswertungsmöglichkeiten} für die Prozessmodelle. Durch die Modellierung von Prozessen werden etwaige Schwachstellen, wie z.B. Doppelarbeiten und Prozessverzögerungen offengelegt, wodurch eine \textit{Prozessoptimierung} möglich ist. Mit Hilfe von \textit{Simulationen} der Prozessmodelle lassen sich eventuelle Engpässe rechtzeitig erkennen. Die Voraussetzung für die \textit{Zertifizierung} nach DIN EN ISO 9000:1000 sind Prozessmodelle als Dokumentation. Basis für die Entwicklung von Softwaresystemen bilden Prozessmodelle, weshalb sie als \textit{Basis für die informationstechnische Unterstützung} dienen.
+Bei der \textit{Transparenz} geht es darum, dass alle Beteiligten am Prozess diesen einsehen können, von wem welche Aufgaben durchgeführt werden. Weiterhin verfolgt die Prozessmodellierung das Ziel, durch \textit{Fehlervermeidung} die Qualität, Termintreue und Kundenzufriedenheit zu erhöhen. Durch die Modellierung eines Prozesses kann dieser genau analysiert werden und hierdurch können Einsparungspotenziale von \textit{Kosten} aufgedeckt werden. Indem die Abläufe in einem Unternehmen als Prozesse dargestellt werden, ist es möglich, eine \textit{personenunabhängige Verfügbarkeit des Wissens} zu erreichen, da das Wissen hierdurch allen Personen zugänglich gemacht wird, unabhängig davon, ob sie am Prozess beteiligt sind oder nicht. Die Prozessmodellierung führt zu einer \textit{erleichterten Einarbeitung neuer Mitarbeiter}. Durch die Darstellung der Tätigkeiten der einzelnen Mitarbeiter in Prozessmodellen, wird ihnen ihr Beitrag zum Erfolg des Unternehmens vor Augen geführt, was eine \textit{erhöhte Mitarbeitermotivation} zur Folge hat. Nach deren Erstellung gibt es verschiedene \textit{Auswertungsmöglichkeiten} für die Prozessmodelle. Durch die Modellierung von Prozessen werden etwaige Schwachstellen, wie z.B. Doppelarbeiten und Prozessverzögerungen offengelegt, wodurch eine \textit{Prozessoptimierung} möglich ist. Mit Hilfe von \textit{Simulationen} der Prozessmodelle lassen sich eventuelle Engpässe rechtzeitig erkennen. Die Voraussetzung für die \textit{Zertifizierung} nach DIN EN ISO 9000:1000 sind Prozessmodelle als Dokumentation. Basis für die Entwicklung von Softwaresystemen bilden Prozessmodelle, weshalb sie als \textit{Basis für die informationstechnische Unterstützung} dienen.
 
 \subsection{Grundsätze ordnungsgemäßer Modellierung}
 
@@ -30,7 +30,7 @@ Bei der Gestaltung eines Modells sollten grundlegende Prinzipien beachtet werden
 \end{center}
 \end{figure}
 
-Der \textit{Grundsatz der Richtigkeit} besitzt zwei verschiedene Ausprägungen: Eine syntaktische und eine semantische. Ein Modell wird als semantisch korrekt, oder auch formal korrekt bezeichnet, wenn es dem ihm zugrunde liegenden Metamodell gegenüber vollständig und konsistent ist, d.h. es gibt den abzubildenden Sachverhalt korrekt wieder. Hierbei muss einerseits auf die korrekte Abbildung der Struktur des Metamodells, als auch des dort beschriebenen Verhaltens geachtet werden \cite{journals95, becker2012prozessmanagement}. \newline
+Der \textit{Grundsatz der Richtigkeit} besitzt zwei verschiedene Ausprägungen: Eine semantische und eine syntaktische. Ein Modell wird als semantisch korrekt, oder auch formal korrekt bezeichnet, wenn es dem ihm zugrunde liegenden Metamodell gegenüber vollständig und konsistent ist, d.h. es gibt den abzubildenden Sachverhalt korrekt wieder. Hierbei muss einerseits auf die korrekte Abbildung der Struktur des Metamodells, als auch des dort beschriebenen Verhaltens geachtet werden \cite{journals95, becker2012prozessmanagement}. \newline
 
 Die syntaktische \textit{Richtigkeit} eines Modells wird durch die Einhaltung der Notationsregeln der dem Modell zugrunde liegenden Prozessmodellierungssprache erreicht \cite{journals95, becker2012prozessmanagement}. \newline
 
